--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
@@ -7,6 +7,9 @@ var sections = [{
     name: 'admin_console.change_password',
     templateUrl: window.contextPath + '/admin_console/changepassword.html'
 }, {
+    name: 'admin_console.entities.edit',
+    templateUrl: window.contextPath + '/admin_console/entities/edit.html'
+}, {
     name: 'admin_console.ds.edit',
     templateUrl: window.contextPath + '/admin_console/ds/edit.html'
 }, {
